--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 
         .glass-container {
             position: relative;
-            /* GÜNCELLEME: Arka plan daha şeffaf yapıldı */
             background: rgba(17, 24, 39, 0.65); 
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
@@ -69,6 +68,7 @@
         
         #visualizer { width: 100%; height: 60px; margin-bottom: 1rem; opacity: 0; transition: opacity 0.5s ease-in-out; }
 
+        /* GÜNCELLEME: Sohbet balonu stilleri */
         #fun-fact-bubble {
             position: fixed;
             background: rgba(55, 65, 81, 0.95);
@@ -80,12 +80,26 @@
             z-index: 20;
             pointer-events: none;
             opacity: 0;
-            transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-            transform: scale(0.9) translate(-50%, 0);
+            /* GÜNCELLEME: Yumuşak takip için pozisyon geçişi eklendi */
+            transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, top 1s linear, left 1s linear;
+            transform: scale(0.9) translate(-50%, -100%); /* Başlangıç pozisyonu avatarın üstü */
         }
         #fun-fact-bubble.visible {
             opacity: 1;
-            transform: scale(1) translate(-50%, 0);
+            transform: scale(1) translate(-50%, -100%);
+        }
+        /* GÜNCELLEME: Balonun oku */
+        #fun-fact-bubble::after {
+            content: '';
+            position: absolute;
+            bottom: -8px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 0;
+            height: 0;
+            border-left: 8px solid transparent;
+            border-right: 8px solid transparent;
+            border-top: 8px solid rgba(55, 65, 81, 0.95);
         }
     </style>
 </head>
@@ -118,7 +132,6 @@
     <audio id="player" class="hidden" crossOrigin="anonymous"></audio>
 
     <script type="module">
-        // GÜNCELLEME: `updateAudioLevel` import edildi
         import { initAvatar, setCoreState, updateAvatarBubblePosition, updateAudioLevel } from './kaira-avatar.js';
 
         // --- Arka Plan Animasyonu ---
@@ -148,7 +161,6 @@
             animationFrameId = requestAnimationFrame(drawVisualizer); 
             analyser.getByteFrequencyData(dataArray); 
 
-            // GÜNCELLEME: Ses seviyesini hesapla ve avatar modülüne gönder
             const avgLevel = dataArray.reduce((a, b) => a + b, 0) / dataArray.length / 255;
             updateAudioLevel(avgLevel);
 
@@ -196,16 +208,27 @@
             funFactBubble.textContent = funFacts[Math.floor(Math.random() * funFacts.length)];
             funFactBubble.classList.remove('hidden');
             funFactBubble.classList.add('visible');
+            updateAvatarBubblePosition(funFactBubble); // İlk pozisyonu ayarla
 
             factInterval = setInterval(() => {
                 funFactBubble.textContent = funFacts[Math.floor(Math.random() * funFacts.length)];
+                // GÜNCELLEME: Balonun pozisyonunu sürekli güncelle
                 updateAvatarBubblePosition(funFactBubble);
             }, 10000);
-            updateAvatarBubblePosition(funFactBubble);
+            
+            // GÜNCELLEME: Balonun avatarı yumuşakça takip etmesi için ek bir döngü
+            function followLoop() {
+                if (factInterval) { // Sadece interval çalışıyorsa takip et
+                    updateAvatarBubblePosition(funFactBubble);
+                    requestAnimationFrame(followLoop);
+                }
+            }
+            followLoop();
         }
         function hideWaitingContent() {
             clearTimeout(waitingTimeout);
             clearInterval(factInterval);
+            factInterval = null; // Takip döngüsünü durdurmak için
             funFactBubble.classList.remove('visible');
             setTimeout(() => funFactBubble.classList.add('hidden'), 300);
         }
