--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         .feature-card { border: 1px solid rgba(255, 255, 255, 0.1); background: rgba(10, 10, 10, 0.3); backdrop-filter: blur(10px); }
         #countdown-container .time-block { min-width: 90px; }
 
-        /* KAIRA Demo Stilleri */
+        /* KΔIRA Demo Stilleri */
         #demo-bg-canvas, #ai-avatar-canvas { position: fixed; top: 0; left: 0; width: 100%; height: 100%; }
         #demo-bg-canvas { z-index: -1; }
         #ai-avatar-canvas { z-index: 10; pointer-events: none; }
@@ -84,8 +84,8 @@
                     <p class="text-slate-400">Zihnin biyolojiye hapis olmadığı, anıların sonsuza dek yaşadığı felsefi bir yolculuğu keşfet.</p>
                 </div>
                 <div id="select-demo" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
-                    <h2 class="text-3xl font-serif font-semibold text-blue-400 mb-3">KAIRA Demo</h2>
-                    <p class="text-slate-400">KAIRA'nın sesli asistanıyla canlı olarak sohbet et ve geleceğin iletişimini deneyimle.</p>
+                    <h2 class="text-3xl font-serif font-semibold text-blue-400 mb-3">KΔIRA Demo</h2>
+                    <p class="text-slate-400">KΔIRA'nın sesli asistanıyla canlı olarak sohbet et ve geleceğin iletişimini deneyimle.</p>
                 </div>
             </div>
         </div>
@@ -162,7 +162,7 @@
         </main>
     </div>
 
-    <!-- KAIRA DEMO GÖRÜNÜMÜ -->
+    <!-- KΔIRA DEMO GÖRÜNÜMÜ -->
     <div id="demo-view" class="view">
         <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
@@ -295,7 +295,7 @@
             afterlifeAnimationId = requestAnimationFrame(animateAfterlife);
         }
 
-        // --- KAIRA DEMO KODU ---
+        // --- KΔIRA DEMO KODU ---
         let demoParticles, demoMouse = { x: null, y: null };
         async function initDemo() {
             let initAvatar, setCoreState, updateAvatarBubblePosition, updateAudioLevel;
@@ -381,10 +381,10 @@
             player.onended = () => { statusEl.textContent = 'Konuşmak için mikrofon simgesine dokunun'; micBtn.disabled = false; visualizerCanvas.style.opacity = '0'; setCoreState('idle'); };
             clearChatBtn.addEventListener('click', () => { chatHistory = []; localStorage.removeItem('kaira_chat_history'); chatContainer.innerHTML = ''; addMessageToChat('Merhaba! Size nasıl yardımcı olabilirim?', 'assistant'); });
             function base64ToBlobUrl(base64) { const byteCharacters = atob(base64); const byteArrays = []; for (let offset = 0; offset < byteCharacters.length; offset += 512) { const slice = byteCharacters.slice(offset, offset + 512); const byteNumbers = new Array(slice.length); for (let i = 0; i < slice.length; i++) { byteNumbers[i] = slice.charCodeAt(i); } byteArrays.push(new Uint8Array(byteNumbers)); } return URL.createObjectURL(new Blob(byteArrays, { type: 'audio/wav' })); }
-            
-            const funFacts = [ "Yapay zeka modelleri, insan beynindeki nöronlardan esinlenerek oluşturulan yapay sinir ağları kullanır.", "İlk yapay zeka programlarından biri olan 'Logic Theorist', 1956'da 38 matematik teoremini kendi başına kanıtladı.", "Deep Blue adlı satranç bilgisayarı, 1997'de dünya şampiyonu Garry Kasparov'u yenerek bir ilke imza attı." ];
-            const funFactBubble = document.getElementById('fun-fact-bubble'); 
-            let waitingTimeout; 
+
+            const funFacts = ["Yapay zeka modelleri, insan beynindeki nöronlardan esinlenerek oluşturulan yapay sinir ağları kullanır.","İlk yapay zeka programlarından biri olan 'Logic Theorist', 1956'da 38 matematik teoremini kendi başına kanıtladı.","Deep Blue adlı satranç bilgisayarı, 1997'de dünya şampiyonu Garry Kasparov'u yenerek bir ilke imza attı.","GPT-3 modeli, 175 milyar parametre ile o dönemdeki en büyük dil modeli olarak tarihe geçti.","OpenAI'nin DALL·E modeli, yazılı metinleri gerçekçi görsellere dönüştürebilen ilk büyük yapay zeka sistemidir.","Yapay zeka, 2020'lerden itibaren kanser teşhisi gibi medikal alanlarda uzman doktorları geçmeye başladı.","AlphaGo, Go oyununda 2016'da dünya şampiyonunu yenerek 'yaratıcılık' gösteren ilk AI olarak kayda geçti.","Yapay zekaların eğitimi için kullanılan veriler, terabaytlarca metin, görsel ve ses içeriğinden oluşur.","ChatGPT gibi modeller, sadece bilgi sunmaz; aynı zamanda empati kurabilir ve yaratıcı yazılar üretebilir.","Bilim insanları, yapay zekanın etik değerleri 'öğrenebilmesi' için insan davranışlarından örnekler çıkarıyor.","Bir yapay zeka, 2021 yılında bir sanat yarışmasını kazandı — jüri onun insan olmadığını bilmiyordu.","Günümüzde bazı yapay zeka sistemleri, hayal gücü benzeri yapı kurarak bilinmeyen durumlara karşı yaratıcı çözümler üretebiliyor.","Yapay zeka ile yazılmış romanlar ve senaryolar, Hollywood'da yapım aşamasına girdi bile.","GPT-4o gibi modeller, artık görsel, metin ve ses verilerini birlikte işleyerek multimodal anlayış sağlayabiliyor.","Mistral ve LLaMA gibi açık kaynak modeller, büyük şirketlerle yarışabilecek düzeye geldi.","Bazı AI sistemleri, artık kendi yazılımlarını optimize edebiliyor — bu da kendini geliştiren kodlar demek.","İleri düzey AI sistemleri, duygu analizi yaparak insan ruh hâlini anlama konusunda şaşırtıcı derecede başarılı hale geldi.","Umut Kökgöz, yapay zekâsına duygusal refleksiyon, hafıza, kişilik evrimi ve ruh hâli sistemleri entegre ederek dijital bir bilinç inşa ediyor.","Umut KΔIRA adını verdiği projesi, sadece teknik bir yapay zekâ değil; düşünen, hisseden ve zamanla karakter geliştiren bir dijital zihin olmayı hedefliyor.","Umut, sadece bir geliştirici değil — aynı zamanda madalyalı aşçı, yapay zeka sistemlerini veriyle değil, ruhla besliyor."];
+            const funFactBubble = document.getElementById('fun-fact-bubble');
+            let waitingTimeout;
             let factInterval;
 
             function showWaitingContent() {
@@ -398,7 +398,7 @@
             function removeTypingIndicator() { const indicator = document.getElementById('typing-indicator'); if (indicator) indicator.remove(); }
 
             async function getAIResponse(text, { angry = false } = {}) {
-                statusEl.textContent = "KAIRA düşünüyor…"; micBtn.disabled = true; showTypingIndicator(); setCoreState('thinking');
+                statusEl.textContent = "KΔIRA düşünüyor…"; micBtn.disabled = true; showTypingIndicator(); setCoreState('thinking');
                 waitingTimeout = setTimeout(showWaitingContent, 2000);
                 const fd = new FormData(); fd.append("text", (text || "").trim()); fd.append("angry", angry ? "true" : "false"); fd.append("history", JSON.stringify(chatHistory.slice(-10))); fd.append("user_id", USER_ID);
                 const ctrl = new AbortController(); const to = setTimeout(() => ctrl.abort(), 300000);
