--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
         </button>
         <main>
-            <!-- BÖLÜM 1: AÇILIŞ - PARADİGMA KAYMASI -->
             <section class="afterlife-section">
                 <div class="text-center max-w-4xl mx-auto">
                     <h1 class="text-4xl md:text-6xl font-serif font-light text-slate-200 mb-6 fade-in-up">Zihin, biyolojiye hapis değildir.</h1>
@@ -322,7 +321,6 @@
         async function initDemo() {
             let initAvatar, setCoreState, updateAvatarBubblePosition, updateAudioLevel;
             try {
-                // Bu dosya lokalde olmalı, eğer yoksa hata verecektir ama demo çalışmaya devam edecektir.
                 const avatarModule = await import('./kaira-avatar.js');
                 initAvatar = avatarModule.initAvatar;
                 setCoreState = avatarModule.setCoreState;
@@ -418,7 +416,15 @@
                 const fd = new FormData(); fd.append("text", (text || "").trim()); fd.append("angry", angry ? "true" : "false"); fd.append("history", JSON.stringify(chatHistory.slice(-10))); fd.append("user_id", USER_ID);
                 const ctrl = new AbortController(); const to = setTimeout(() => ctrl.abort(), 300000);
                 try {
-                    const res = await fetch(`${API_BASE}/api/tts`, { method: "POST", body: fd, signal: ctrl.signal });
+                    const res = await fetch(`${API_BASE}/api/tts`, { 
+                        method: "POST", 
+                        body: fd, 
+                        signal: ctrl.signal,
+                        // HATA DÜZELTMESİ: ngrok uyarı sayfasını atlamak için başlık ekliyoruz.
+                        headers: {
+                            'ngrok-skip-browser-warning': 'true'
+                        }
+                    });
                     if (!res.ok) { const txt = await res.text().catch(() => ""); throw new Error(`HTTP ${res.status} ${res.statusText} — ${txt}`); }
                     const data = await res.json();
                     if (!data.audio_data) { throw new Error("API yanıtında 'audio_data' alanı bulunamadı."); }
@@ -460,13 +466,7 @@
 
     <!-- FOTOĞRAF EDİTÖRÜ İÇİN REACT KODU -->
     <script type="text/babel" data-presets="react">
-      const { useState, useCallback } = React;
-
-      // ===================================================================
-      // LÜTFEN GEMINI API ANAHTARINIZI AŞAĞIDAKİ SATIRA YAPIŞTIRIN
-      // ===================================================================
-      const GEMINI_API_KEY = "AIzaSyD6i4l9uEv8GVr9kGbjze4XMk6EQg7lEC4";
-      // ===================================================================
+      const { useState, useCallback, useEffect } = React;
 
       // --- SVG İkonları ---
       const UploadCloudIcon = () => <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/><polyline points="17 8 12 3 7 8"/><line x1="12" x2="12" y1="3" y2="15"/></svg>;
@@ -539,6 +539,54 @@
         const [prompt, setPrompt] = useState('');
         const [isLoading, setIsLoading] = useState(false);
         const [error, setError] = useState(null);
+        const [apiKey, setApiKey] = useState(null);
+        const [apiKeyError, setApiKeyError] = useState(null);
+
+        useEffect(() => {
+            const fetchApiKey = async () => {
+                try {
+                    const response = await fetch('https://1513c704aa10.ngrok-free.app/api/get-key', {
+                        // HATA DÜZELTMESİ: ngrok uyarı sayfasını atlamak için başlık ekliyoruz.
+                        headers: {
+                            'ngrok-skip-browser-warning': 'true'
+                        }
+                    }); 
+                    
+                    const responseText = await response.text();
+
+                    if (!response.ok) {
+                        if (response.status === 404) {
+                            throw new Error('Sunucuda API yolu (/api/get-key) bulunamadı. Lütfen sunucu kodunuzun güncel olduğundan emin olun.');
+                        }
+                        throw new Error(`Sunucu hatası: ${response.status} - ${responseText}`);
+                    }
+                    
+                    let data;
+                    try {
+                        data = JSON.parse(responseText);
+                    } catch (parseError) {
+                        console.error("Sunucudan gelen yanıt JSON formatında değil:", responseText);
+                        throw new Error(`Sunucudan gelen yanıt ayrıştırılamadı. Yanıt: "${responseText.substring(0, 100)}..."`);
+                    }
+
+                    if (data.error) {
+                        throw new Error(data.error);
+                    }
+                    if (!data.apiKey) {
+                        throw new Error('Sunucudan gelen yanıtta API anahtarı bulunamadı.');
+                    }
+                    setApiKey(data.apiKey);
+                } catch (err) {
+                    console.error("API Anahtarı alınırken hata oluştu:", err);
+                    const friendlyError = err.message.includes('Failed to fetch') 
+                        ? 'Sunucuya bağlanılamadı. Lütfen sunucunun çalıştığından ve doğru adreste olduğundan emin olun.'
+                        : err.message;
+                    setApiKeyError(friendlyError);
+                    setError(friendlyError);
+                }
+            };
+            fetchApiKey();
+        }, []);
 
         const handleImageUpload = (e) => {
           const file = e.target.files[0];
@@ -550,8 +598,8 @@
         };
 
         const handleGenerate = async () => {
-          if (GEMINI_API_KEY === "YAPAY_ZEKA_API_ANAHTARINIZI_BURAYA_YAPISTIRIN") {
-            setError("Lütfen kod dosyasının içinde Gemini API anahtarınızı belirtin.");
+          if (!apiKey) {
+            setError(apiKeyError || "API anahtarı alınamadı. Lütfen sunucu bağlantısını kontrol edin.");
             return;
           }
           if (!originalImage) { setError("Lütfen düzenlemek için bir fotoğraf yükleyin."); return; }
@@ -562,7 +610,7 @@
           setModifiedImage(null);
 
           try {
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-image-preview:generateContent?key=${GEMINI_API_KEY}`;
+            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-image-preview:generateContent?key=${apiKey}`;
             const base64Data = originalImage.split(',')[1];
             const mimeType = originalImage.match(/:(.*?);/)[1];
 
@@ -643,7 +691,7 @@
                   />
                   <button
                     onClick={handleGenerate}
-                    disabled={isLoading}
+                    disabled={isLoading || !apiKey}
                     className="w-full md:w-auto flex items-center justify-center gap-2 bg-purple-600 hover:bg-purple-700 disabled:bg-gray-600 disabled:cursor-not-allowed text-white font-bold py-4 px-8 rounded-lg transition-all duration-300 transform hover:scale-105 disabled:scale-100"
                   >
                     <Wand2Icon size={20} />
