--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 
     <!-- NASA GÖZLEM PLATFORMU (ADIM 1) -->
     <div id="nasa-view" class="view">
-        <div class="hubble-skin"></div>
+  <div class="hubble-skin">
         <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
         </button>
@@ -495,6 +495,7 @@
               <h2 class="text-xl font-semibold text-white mb-3">Gökyüzü Haritası</h2>
               <div id="aladin-map" style="height:420px;border:1px solid rgba(255,255,255,0.12);border-radius:12px;overflow:hidden"></div>
               <p class="text-gray-400 text-sm mt-2">İpucu: sürükle-pan, tekerlek-zoom, sağ tık menü.</p>
+              <div id="exo-info" class="text-gray-400 text-sm mt-1"></div>
             </section>
             <main>
                 <div id="apod-container" class="nasa-content active"><div class="text-center text-gray-500 p-8">Adım 2’de etkinleştirilecek.</div></div>
