--- a/index.html
+++ b/index.html
@@ -2010,7 +2010,13 @@ function toggleMask(inputEl, btnEl){
         });
 
     </script>
-
+<style id="kaira-debug-overrides">
+  /* === DEBUG TOGGLE OVERRIDES === */
+  html.debug-open, body.debug-open { overflow: auto !important; }
+  .debug-open * { -webkit-user-select: text !important; user-select: text !important; }
+  .debug-open #anti-leak-overlay { display: none !important; }
+  @media print { html.debug-open, body.debug-open { display: block !important; } }
+</style>
 
 </body>
 </html>
