--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
     
     <!-- Gerekli Kütüphaneler: Three.js (3D için) ve GSAP (Animasyon için) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <!-- Aladin Lite (local) + fallback -->
-    <link rel="stylesheet" href="./aladin/43a0ba91c802eb87.css">
-    <script src="./aladin/aladinLiteV3.min.js"></script>
-    <script>
-      if (!window.A || typeof A.aladin !== 'function') {
-        console.warn('Yerel Aladin bulunamadı, CDN\'e düşülüyor…');
-        var s = document.createElement('script');
-        s.src = 'https://aladin.cds.unistra.fr/AladinLite/api/v3/latest/aladin.min.js';
-        document.head.appendChild(s);
-      }
+    <!-- Aladin Lite (CDN-only for diagnostics) -->
+    <link rel="stylesheet" href="https://aladin.cds.unistra.fr/AladinLite/api/v3/latest/aladin.min.css">
+    <script src="https://aladin.cds.unistra.fr/AladinLite/api/v3/latest/aladin.min.js"></script>
+    <script id="aladin-cdn-sanity">
+      // Step 2: simple sanity check for CDN-loaded Aladin
+      window.addEventListener('load', function(){
+        var ok = !!(window.A && typeof A.aladin === 'function');
+        console.log('[Aladin] CDN sanity:', ok ? 'OK' : 'MISSING');
+        try {
+          var box = document.getElementById('exo-info');
+          if (box && !ok) {
+            box.textContent = 'Uyarı: Aladin yüklenemedi (CDN).';
+          }
+        } catch(_){}
+      });
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     
@@ -2016,7 +2021,63 @@ function toggleMask(inputEl, btnEl){
   .debug-open * { -webkit-user-select: text !important; user-select: text !important; }
   .debug-open #anti-leak-overlay { display: none !important; }
   @media print { html.debug-open, body.debug-open { display: block !important; } }
+  
 </style>
+<script id="kaira-debug-toggle">
+(function(){
+  // URL param ?debug=1 → başlatırken açık
+  const params = new URLSearchParams(location.search);
+  let debug = params.get('debug') === '1';
+
+  function applyDebug(on){
+    document.documentElement.classList.toggle('debug-open', on);
+    document.body.classList.toggle('debug-open', on);
+    // Bilinen engelleyicileri temizlemeye çalış (F12, sağ tık vb.)
+    if (on){
+      document.oncontextmenu = null; window.oncontextmenu = null;
+      document.onkeydown = null; window.onkeydown = null;
+    }
+  }
+
+  // Sağ tık ve klavye engelleyicilerini yakalama fazında etkisizleştir
+  window.addEventListener('contextmenu', function(e){
+    if (document.documentElement.classList.contains('debug-open')){
+      e.stopImmediatePropagation();
+      // preventDefault çağırmıyoruz → sistem menüsü açılır
+    }
+  }, true);
+
+  window.addEventListener('keydown', function(e){
+    if (document.documentElement.classList.contains('debug-open')){
+      e.stopImmediatePropagation();
+      // preventDefault yok → F12 vb. çalışır
+    }
+  }, true);
+
+  // Başlangıç durumunu uygula
+  applyDebug(debug);
+
+  // Kısayol: Ctrl/Cmd + Shift + D → Toggle
+  window.addEventListener('keydown', function(e){
+    const isMod = e.ctrlKey || e.metaKey;
+    if (isMod && e.shiftKey && (e.key === 'd' || e.key === 'D')){
+      debug = !debug; applyDebug(debug);
+      console.warn('KAIRA DEBUG:', debug ? 'ON' : 'OFF');
+    }
+  }, false);
+
+  // Konsoldan kontrol: KAIRA_DEBUG.on() / KAIRA_DEBUG.off()
+  window.KAIRA_DEBUG = {
+    on(){ if (!debug){ debug = true; applyDebug(true); console.warn('KAIRA DEBUG: ON'); } },
+    off(){ if (debug){ debug = false; applyDebug(false); console.warn('KAIRA DEBUG: OFF'); } }
+  };
+
+  console.log('%cKAIRA Debug hazır.', 'color:#22d3ee',
+              '\n• Aç/Kapat: Ctrl/Cmd+Shift+D' +
+              '\n• URL ile: ?debug=1' +
+              '\n• Konsol: KAIRA_DEBUG.on() / KAIRA_DEBUG.off()');
+})();
+</script>
 
 </body>
 </html>
